feat: add job and company detail pages with filtering and applications functionality
- Introduced CompanyDetailPage and JobDetailPage components for displaying detailed information about companies and jobs.
- Implemented CompaniesFilterSidebar for filtering job listings based on organization type and location radius.
- Created ApplicationsPage to manage and display user job applications with pagination.
- Enhanced localization support by adding new translations for job and company-related terms in English and Vietnamese.
- Added various UI components such as CompanyCard, JobCard, and ApplicationsTableRow for improved user experience.

--- a/locales/en.json
+++ b/locales/en.json
@@ -279,5 +279,67 @@
     "contract": "Contract",
     "internship": "Internship",
     "temporary": "Temporary"
+  },
+  "Applications": {
+    "jobs": "JOBS",
+    "dateApplied": "DATE APPLIED",
+    "status": "STATUS",
+    "action": "ACTION",
+    "active": "Active",
+    "pending": "Pending",
+    "rejected": "Rejected",
+    "viewDetails": "View Details"
+  },
+  "JobDetail": {
+    "jobDetails": "Job Details",
+    "jobOverview": "Job Overview",
+    "jobPosted": "Job Posted:",
+    "jobExpireIn": "Job expire in:",
+    "education": "Education",
+    "salary": "Salary:",
+    "location": "Location:",
+    "jobType": "Job type:",
+    "experience": "Experience",
+    "applyNow": "Apply now",
+    "jobDescription": "Job Description",
+    "responsibilities": "Responsibilities",
+    "shareThisJob": "Share this job:",
+    "relatedJobs": "Related Jobs",
+    "foundedIn": "Founded in:",
+    "organizationType": "Organization type:",
+    "companySize": "Company size:",
+    "phone": "Phone:",
+    "email": "Email:",
+    "website": "Website:"
+  },
+  "Companies": {
+    "findEmployers": "Find Employers",
+    "jobTitleKeyword": "Job title, Keyword...",
+    "location": "Location",
+    "selectCategory": "Select Category",
+    "findJob": "Find Job",
+    "filter": "Filter",
+    "openPosition": "Open Position",
+    "openJob": "open Job",
+    "locationRadius": "Location Radius:",
+    "miles": "miles",
+    "organizationType": "Organization Type"
+  },
+  "CompanyDetail": {
+    "singleEmployers": "Single Employers",
+    "viewOpenPosition": "View Open Position",
+    "description": "Description",
+    "companyBenefits": "Company Benefits",
+    "companyVision": "Company Vision",
+    "shareProfile": "Share profile:",
+    "foundedIn": "Founded in:",
+    "organizationType": "Organization type",
+    "teamSize": "Team size",
+    "industryTypes": "Industry types",
+    "contactInformation": "Contact Information",
+    "website": "Website",
+    "phone": "Phone",
+    "emailAddress": "Email address",
+    "followUsOn": "Follow us on:"
   }
 }
