--- a/locales/vi.json
+++ b/locales/vi.json
@@ -278,5 +278,67 @@
     "contract": "Hợp đồng",
     "internship": "Thực tập",
     "temporary": "Tạm thời"
+  },
+  "Applications": {
+    "jobs": "CÔNG VIỆC",
+    "dateApplied": "NGÀY NỘP",
+    "status": "TRẠNG THÁI",
+    "action": "HÀNH ĐỘNG",
+    "active": "Đang hoạt động",
+    "pending": "Chờ xử lý",
+    "rejected": "Đã từ chối",
+    "viewDetails": "Xem chi tiết"
+  },
+  "JobDetail": {
+    "jobDetails": "Chi tiết công việc",
+    "jobOverview": "Tổng quan công việc",
+    "jobPosted": "Ngày đăng:",
+    "jobExpireIn": "Hết hạn vào:",
+    "education": "Học vấn",
+    "salary": "Lương:",
+    "location": "Địa điểm:",
+    "jobType": "Loại công việc:",
+    "experience": "Kinh nghiệm",
+    "applyNow": "Ứng tuyển ngay",
+    "jobDescription": "Mô tả công việc",
+    "responsibilities": "Trách nhiệm",
+    "shareThisJob": "Chia sẻ công việc:",
+    "relatedJobs": "Công việc liên quan",
+    "foundedIn": "Thành lập:",
+    "organizationType": "Loại tổ chức:",
+    "companySize": "Quy mô:",
+    "phone": "Điện thoại:",
+    "email": "Email:",
+    "website": "Website:"
+  },
+  "Companies": {
+    "findEmployers": "Tìm nhà tuyển dụng",
+    "jobTitleKeyword": "Tên công việc, Từ khóa...",
+    "location": "Địa điểm",
+    "selectCategory": "Chọn danh mục",
+    "findJob": "Tìm việc",
+    "filter": "Bộ lọc",
+    "openPosition": "Vị trí tuyển dụng",
+    "openJob": "vị trí",
+    "locationRadius": "Bán kính địa điểm:",
+    "miles": "dặm",
+    "organizationType": "Loại tổ chức"
+  },
+  "CompanyDetail": {
+    "singleEmployers": "Chi tiết công ty",
+    "viewOpenPosition": "Xem vị trí tuyển dụng",
+    "description": "Mô tả",
+    "companyBenefits": "Quyền lợi công ty",
+    "companyVision": "Tầm nhìn công ty",
+    "shareProfile": "Chia sẻ hồ sơ:",
+    "foundedIn": "Thành lập:",
+    "organizationType": "Loại tổ chức",
+    "teamSize": "Quy mô nhóm",
+    "industryTypes": "Loại ngành",
+    "contactInformation": "Thông tin liên hệ",
+    "website": "Website",
+    "phone": "Điện thoại",
+    "emailAddress": "Địa chỉ email",
+    "followUsOn": "Theo dõi chúng tôi:"
   }
 }
