feat(admin): add comprehensive admin panel with localization and management features

--- a/locales/en.json
+++ b/locales/en.json
@@ -341,5 +341,322 @@
     "phone": "Phone",
     "emailAddress": "Email address",
     "followUsOn": "Follow us on:"
+  },
+  "Admin": {
+    "sidebar": {
+      "dashboard": "Dashboard",
+      "users": "Users",
+      "jobs": "Jobs",
+      "jobModeration": "Job Moderation",
+      "companies": "Companies",
+      "reports": "Reports",
+      "categories": "Categories",
+      "payments": "Payments",
+      "settings": "Settings",
+      "systemStatus": "System Status",
+      "allSystemsOperational": "All systems operational"
+    },
+    "dashboard": {
+      "title": "Dashboard Overview",
+      "welcome": "Welcome back! Here's what's happening with your platform.",
+      "loading": "Loading dashboard...",
+      "totalUsers": "Total Users",
+      "companies": "Companies",
+      "activeJobs": "Active Jobs",
+      "applications": "Applications",
+      "newThisMonth": "new this month",
+      "employers": "employers",
+      "pendingApproval": "pending approval",
+      "fromLastMonth": "from last month",
+      "userGrowth": "User Growth (Last 30 Days)",
+      "jobPostingsTrend": "Job Postings Trend (Last 30 Days)",
+      "recentActivities": "Recent Activities",
+      "loadingActivities": "Loading activities...",
+      "recentCompanies": "Recent Companies",
+      "recentJobs": "Recent Jobs",
+      "noCompaniesYet": "No companies yet",
+      "noJobsYet": "No jobs yet",
+      "quickActions": "Quick Actions",
+      "manageUsers": "Manage Users",
+      "jobModerationAction": "Job Moderation",
+      "viewAll": "View All",
+      "verified": "Verified",
+      "pending": "Pending"
+    },
+    "users": {
+      "title": "User Management",
+      "description": "Manage all users, roles, and permissions",
+      "searchPlaceholder": "Search by username, email, or name...",
+      "allRoles": "All Roles",
+      "allStatus": "All Status",
+      "addUser": "Add User",
+      "user": "User",
+      "userCode": "User Code",
+      "username": "Username",
+      "name": "Name",
+      "role": "Role",
+      "roles": "Roles",
+      "status": "Status",
+      "joinedDate": "Joined Date",
+      "createdAt": "Created At",
+      "actions": "Actions",
+      "edit": "Edit",
+      "delete": "Delete",
+      "active": "Active",
+      "inactive": "Inactive",
+      "pending": "Pending",
+      "banned": "Banned",
+      "noUsersFound": "No users found",
+      "admin": "Admin",
+      "employer": "Employer",
+      "candidate": "Candidate",
+      "activateUser": "Activate User",
+      "activateUserConfirm": "Are you sure you want to activate this user?",
+      "banUser": "Ban User",
+      "banUserConfirm": "Are you sure you want to ban this user? They will no longer be able to access the system.",
+      "resetPassword": "Reset Password",
+      "resetPasswordConfirm": "A new password will be generated and sent to the user via email.",
+      "activateSelected": "Activate Selected",
+      "banSelected": "Ban Selected",
+      "userActivatedSuccess": "User activated successfully",
+      "userActivatedError": "Failed to activate user",
+      "userStatusUpdatedSuccess": "User status updated successfully",
+      "userStatusUpdatedError": "Failed to update user status",
+      "passwordResetSuccess": "Password reset successfully. New password sent to user via email.",
+      "passwordResetError": "Failed to reset password"
+    },
+    "jobs": {
+      "title": "Job Management",
+      "description": "Manage and moderate job postings",
+      "searchPlaceholder": "Search jobs...",
+      "locationPlaceholder": "Location...",
+      "allStatus": "All Status",
+      "allTypes": "All Types",
+      "addJob": "Add Job",
+      "jobTitle": "Job Title",
+      "type": "Type",
+      "company": "Company",
+      "location": "Location",
+      "salary": "Salary",
+      "status": "Status",
+      "applications": "Applications",
+      "postedDate": "Posted Date",
+      "actions": "Actions",
+      "edit": "Edit",
+      "delete": "Delete",
+      "approve": "Approve",
+      "reject": "Reject",
+      "active": "Active",
+      "pending": "Pending",
+      "inactive": "Inactive",
+      "noJobsFound": "No jobs found",
+      "loadingJobs": "Loading jobs...",
+      "errorLoadingJobs": "Error loading jobs",
+      "fullTime": "Full Time",
+      "partTime": "Part Time",
+      "contract": "Contract",
+      "internship": "Internship",
+      "remote": "Remote",
+      "deleteJob": "Delete Job",
+      "deleteJobConfirm": "Are you sure you want to delete this job? This action cannot be undone.",
+      "jobDeletedSuccess": "Job deleted successfully",
+      "jobDeletedError": "Failed to delete job"
+    },
+    "companies": {
+      "title": "Company Management",
+      "description": "Manage and verify company profiles",
+      "searchPlaceholder": "Search companies...",
+      "allStatus": "All Status",
+      "allIndustries": "All Industries",
+      "addCompany": "Add Company",
+      "companyName": "Company Name",
+      "contact": "Contact",
+      "size": "Size",
+      "jobs": "Jobs",
+      "industry": "Industry",
+      "location": "Location",
+      "status": "Status",
+      "createdDate": "Created Date",
+      "actions": "Actions",
+      "edit": "Edit",
+      "delete": "Delete",
+      "verify": "Verify",
+      "verified": "Verified",
+      "notVerified": "Not Verified",
+      "pending": "Pending",
+      "noCompaniesFound": "No companies found",
+      "loadingCompanies": "Loading companies...",
+      "errorLoadingCompanies": "Error loading companies",
+      "technology": "Technology",
+      "finance": "Finance",
+      "healthcare": "Healthcare",
+      "education": "Education",
+      "retail": "Retail",
+      "manufacturing": "Manufacturing",
+      "deleteCompany": "Delete Company",
+      "deleteCompanyConfirm": "Are you sure you want to delete this company? This action cannot be undone.",
+      "verifyCompany": "Verify Company",
+      "verifyCompanyConfirm": "Are you sure you want to verify this company?",
+      "rejectVerification": "Reject Verification",
+      "rejectVerificationConfirm": "Are you sure you want to reject verification for this company?",
+      "companyVerifiedSuccess": "Company verified successfully",
+      "companyVerifiedError": "Failed to verify company",
+      "companyRejectedSuccess": "Company verification rejected",
+      "companyRejectedError": "Failed to reject verification",
+      "companyDeletedSuccess": "Company deleted successfully",
+      "companyDeletedError": "Failed to delete company",
+      "provideRejectionReason": "Please provide a reason for rejection:"
+    },
+    "categories": {
+      "title": "Category Management",
+      "description": "Manage job categories",
+      "searchPlaceholder": "Search categories...",
+      "addCategory": "Add Category",
+      "categoryName": "Category Name",
+      "name": "Name",
+      "slug": "Slug",
+      "descriptionLabel": "Description",
+      "noDescription": "No description",
+      "jobCount": "Job Count",
+      "actions": "Actions",
+      "edit": "Edit",
+      "delete": "Delete",
+      "view": "View",
+      "noCategoriesFound": "No categories found",
+      "loadingCategories": "Loading categories...",
+      "errorLoadingCategories": "Error loading categories",
+      "deleteCategory": "Delete Category",
+      "deleteCategoryConfirm": "Are you sure you want to delete \"{name}\"? This action cannot be undone.",
+      "categoryDeletedSuccess": "Category deleted successfully",
+      "categoryDeletedError": "Failed to delete category",
+      "categories": "Categories"
+    },
+    "moderation": {
+      "title": "Job Moderation",
+      "description": "Review and approve job postings",
+      "pendingJobs": "Pending Jobs",
+      "approveJob": "Approve Job",
+      "rejectJob": "Reject Job",
+      "approveJobConfirm": "This job will be published and visible to all users.",
+      "rejectJobConfirm": "This job will be rejected. Please provide a reason.",
+      "jobApprovedSuccess": "Job approved successfully",
+      "jobRejectedSuccess": "Job rejected successfully",
+      "jobApprovedError": "Failed to approve job",
+      "jobRejectedError": "Failed to reject job",
+      "approvedToday": "Approved Today",
+      "rejectedToday": "Rejected Today",
+      "noJobsPending": "No pending jobs for moderation",
+      "approveSelected": "Approve Selected",
+      "rejectSelected": "Reject Selected",
+      "rejectionReason": "Rejection reason:",
+      "provideRejectionReason": "Please provide a reason for rejection",
+      "jobTitle": "Job Title",
+      "company": "Company",
+      "type": "Type",
+      "salary": "Salary",
+      "reports": "Reports",
+      "submitted": "Submitted",
+      "actions": "Actions"
+    },
+    "reports": {
+      "title": "Report Management",
+      "description": "Review and resolve user-submitted reports",
+      "totalReports": "Total Reports",
+      "pendingReports": "Pending Reports",
+      "resolvedReports": "Resolved Reports",
+      "unresolvedReports": "Unresolved Reports",
+      "allStatus": "All Status",
+      "unresolved": "Unresolved",
+      "resolved": "Resolved",
+      "reporterId": "Reporter ID",
+      "resourceType": "Resource Type",
+      "resourceId": "Resource ID",
+      "reason": "Reason",
+      "description": "Description",
+      "viewResource": "View Resource",
+      "resolve": "Resolve",
+      "resolveSuccess": "Report resolved successfully",
+      "resolveError": "Failed to resolve report",
+      "loadingReports": "Loading reports...",
+      "errorLoadingReports": "Error loading reports",
+      "noReportsFound": "No reports found"
+    },
+    "payments": {
+      "title": "Payment Management",
+      "description": "View and manage payment transactions",
+      "totalRevenue": "Total Revenue",
+      "pendingPayments": "Pending Payments",
+      "completedPayments": "Completed Payments",
+      "transactionId": "Transaction ID",
+      "userId": "User ID",
+      "amount": "Amount",
+      "paymentMethod": "Payment Method",
+      "status": "Status",
+      "date": "Date",
+      "actions": "Actions",
+      "success": "Success",
+      "pending": "Pending",
+      "failed": "Failed",
+      "cancelled": "Cancelled",
+      "completed": "Completed",
+      "loadingPayments": "Loading payments...",
+      "errorLoadingPayments": "Error loading payments",
+      "noPaymentsFound": "No payments found",
+      "paymentTransactions": "Payment Transactions"
+    },
+    "settings": {
+      "title": "System Settings",
+      "description": "Configure system-wide settings and preferences",
+      "general": "General Settings",
+      "security": "Security Settings",
+      "notifications": "Notifications",
+      "saveSettings": "Save Changes",
+      "settingsSaved": "Settings updated successfully",
+      "settingsError": "Failed to update settings",
+      "loadingSettings": "Loading settings...",
+      "siteName": "Site Name",
+      "siteDescription": "Site Description",
+      "contactEmail": "Contact Email",
+      "contactPhone": "Contact Phone",
+      "logoUrl": "Logo URL",
+      "passwordMinLength": "Min Password Length",
+      "sessionTimeout": "Session Timeout (minutes)",
+      "maxLoginAttempts": "Max Login Attempts",
+      "maintenanceMode": "Maintenance Mode",
+      "enableMaintenanceMode": "Enable Maintenance Mode",
+      "maintenanceMessage": "Maintenance Message",
+      "maintenanceDescription": "Users will see a maintenance page",
+      "maintenancePlaceholder": "We're currently performing maintenance. Please check back soon.",
+      "reset": "Reset",
+      "saving": "Saving..."
+    },
+    "common": {
+      "save": "Save",
+      "cancel": "Cancel",
+      "confirm": "Confirm",
+      "delete": "Delete",
+      "edit": "Edit",
+      "view": "View",
+      "search": "Search",
+      "filter": "Filter",
+      "export": "Export",
+      "import": "Import",
+      "loading": "Loading...",
+      "noData": "No data available",
+      "showing": "Showing",
+      "of": "of",
+      "to": "to",
+      "results": "results",
+      "previous": "Previous",
+      "next": "Next",
+      "reset": "Reset",
+      "clear": "Clear",
+      "selected": "selected",
+      "all": "All",
+      "loadingJobs": "Loading jobs...",
+      "loadingCompanies": "Loading companies...",
+      "errorLoadingJobs": "Error loading jobs",
+      "errorLoadingCompanies": "Error loading companies"
+    }
   }
 }
