--- a/locales/vi.json
+++ b/locales/vi.json
@@ -340,5 +340,322 @@
     "phone": "Điện thoại",
     "emailAddress": "Địa chỉ email",
     "followUsOn": "Theo dõi chúng tôi:"
+  },
+  "Admin": {
+    "sidebar": {
+      "dashboard": "Bảng điều khiển",
+      "users": "Người dùng",
+      "jobs": "Việc làm",
+      "jobModeration": "Kiểm duyệt việc làm",
+      "companies": "Công ty",
+      "reports": "Báo cáo",
+      "categories": "Danh mục",
+      "payments": "Thanh toán",
+      "settings": "Cài đặt",
+      "systemStatus": "Trạng thái hệ thống",
+      "allSystemsOperational": "Tất cả hệ thống hoạt động bình thường"
+    },
+    "dashboard": {
+      "title": "Tổng quan bảng điều khiển",
+      "welcome": "Chào mừng trở lại! Đây là những gì đang xảy ra với nền tảng của bạn.",
+      "loading": "Đang tải bảng điều khiển...",
+      "totalUsers": "Tổng người dùng",
+      "companies": "Công ty",
+      "activeJobs": "Việc làm đang hoạt động",
+      "applications": "Đơn ứng tuyển",
+      "newThisMonth": "mới trong tháng này",
+      "employers": "nhà tuyển dụng",
+      "pendingApproval": "chờ phê duyệt",
+      "fromLastMonth": "so với tháng trước",
+      "userGrowth": "Tăng trưởng người dùng (30 ngày qua)",
+      "jobPostingsTrend": "Xu hướng đăng việc (30 ngày qua)",
+      "recentActivities": "Hoạt động gần đây",
+      "loadingActivities": "Đang tải hoạt động...",
+      "recentCompanies": "Công ty gần đây",
+      "recentJobs": "Việc làm gần đây",
+      "noCompaniesYet": "Chưa có công ty nào",
+      "noJobsYet": "Chưa có việc làm nào",
+      "quickActions": "Thao tác nhanh",
+      "manageUsers": "Quản lý người dùng",
+      "jobModerationAction": "Kiểm duyệt việc làm",
+      "viewAll": "Xem tất cả",
+      "verified": "Đã xác minh",
+      "pending": "Đang chờ"
+    },
+    "users": {
+      "title": "Quản lý người dùng",
+      "description": "Quản lý tất cả người dùng, vai trò và quyền hạn",
+      "searchPlaceholder": "Tìm theo tên đăng nhập, email hoặc tên...",
+      "allRoles": "Tất cả vai trò",
+      "allStatus": "Tất cả trạng thái",
+      "addUser": "Thêm người dùng",
+      "user": "Người dùng",
+      "userCode": "Mã người dùng",
+      "username": "Tên đăng nhập",
+      "name": "Họ tên",
+      "role": "Vai trò",
+      "roles": "Vai trò",
+      "status": "Trạng thái",
+      "joinedDate": "Ngày tham gia",
+      "createdAt": "Ngày tạo",
+      "actions": "Hành động",
+      "edit": "Sửa",
+      "delete": "Xóa",
+      "active": "Hoạt động",
+      "inactive": "Không hoạt động",
+      "pending": "Đang chờ",
+      "banned": "Bị cấm",
+      "noUsersFound": "Không tìm thấy người dùng",
+      "admin": "Quản trị viên",
+      "employer": "Nhà tuyển dụng",
+      "candidate": "Ứng viên",
+      "activateUser": "Kích hoạt người dùng",
+      "activateUserConfirm": "Bạn có chắc chắn muốn kích hoạt người dùng này?",
+      "banUser": "Cấm người dùng",
+      "banUserConfirm": "Bạn có chắc chắn muốn cấm người dùng này? Họ sẽ không thể truy cập hệ thống.",
+      "resetPassword": "Đặt lại mật khẩu",
+      "resetPasswordConfirm": "Mật khẩu mới sẽ được tạo và gửi đến email của người dùng.",
+      "activateSelected": "Kích hoạt đã chọn",
+      "banSelected": "Cấm đã chọn",
+      "userActivatedSuccess": "Kích hoạt người dùng thành công",
+      "userActivatedError": "Không thể kích hoạt người dùng",
+      "userStatusUpdatedSuccess": "Cập nhật trạng thái người dùng thành công",
+      "userStatusUpdatedError": "Không thể cập nhật trạng thái người dùng",
+      "passwordResetSuccess": "Đặt lại mật khẩu thành công. Mật khẩu mới đã được gửi qua email.",
+      "passwordResetError": "Không thể đặt lại mật khẩu"
+    },
+    "jobs": {
+      "title": "Quản lý việc làm",
+      "description": "Quản lý và kiểm duyệt tin tuyển dụng",
+      "searchPlaceholder": "Tìm kiếm việc làm...",
+      "locationPlaceholder": "Địa điểm...",
+      "allStatus": "Tất cả trạng thái",
+      "allTypes": "Tất cả loại",
+      "addJob": "Thêm việc làm",
+      "jobTitle": "Tiêu đề việc làm",
+      "type": "Loại",
+      "company": "Công ty",
+      "location": "Địa điểm",
+      "salary": "Lương",
+      "status": "Trạng thái",
+      "applications": "Đơn ứng tuyển",
+      "postedDate": "Ngày đăng",
+      "actions": "Hành động",
+      "edit": "Sửa",
+      "delete": "Xóa",
+      "approve": "Phê duyệt",
+      "reject": "Từ chối",
+      "active": "Hoạt động",
+      "pending": "Đang chờ",
+      "inactive": "Không hoạt động",
+      "noJobsFound": "Không tìm thấy việc làm",
+      "loadingJobs": "Đang tải việc làm...",
+      "errorLoadingJobs": "Lỗi khi tải việc làm",
+      "fullTime": "Toàn thời gian",
+      "partTime": "Bán thời gian",
+      "contract": "Hợp đồng",
+      "internship": "Thực tập",
+      "remote": "Từ xa",
+      "deleteJob": "Xóa việc làm",
+      "deleteJobConfirm": "Bạn có chắc chắn muốn xóa việc làm này? Hành động này không thể hoàn tác.",
+      "jobDeletedSuccess": "Xóa việc làm thành công",
+      "jobDeletedError": "Không thể xóa việc làm"
+    },
+    "companies": {
+      "title": "Quản lý công ty",
+      "description": "Quản lý và xác minh hồ sơ công ty",
+      "searchPlaceholder": "Tìm kiếm công ty...",
+      "allStatus": "Tất cả trạng thái",
+      "allIndustries": "Tất cả ngành nghề",
+      "addCompany": "Thêm công ty",
+      "companyName": "Tên công ty",
+      "contact": "Liên hệ",
+      "size": "Quy mô",
+      "jobs": "Việc làm",
+      "industry": "Ngành nghề",
+      "location": "Địa điểm",
+      "status": "Trạng thái",
+      "createdDate": "Ngày tạo",
+      "actions": "Hành động",
+      "edit": "Sửa",
+      "delete": "Xóa",
+      "verify": "Xác minh",
+      "verified": "Đã xác minh",
+      "notVerified": "Chưa xác minh",
+      "pending": "Đang chờ",
+      "noCompaniesFound": "Không tìm thấy công ty",
+      "loadingCompanies": "Đang tải công ty...",
+      "errorLoadingCompanies": "Lỗi khi tải công ty",
+      "technology": "Công nghệ",
+      "finance": "Tài chính",
+      "healthcare": "Y tế",
+      "education": "Giáo dục",
+      "retail": "Bán lẻ",
+      "manufacturing": "Sản xuất",
+      "deleteCompany": "Xóa công ty",
+      "deleteCompanyConfirm": "Bạn có chắc chắn muốn xóa công ty này? Hành động này không thể hoàn tác.",
+      "verifyCompany": "Xác minh công ty",
+      "verifyCompanyConfirm": "Bạn có chắc chắn muốn xác minh công ty này?",
+      "rejectVerification": "Từ chối xác minh",
+      "rejectVerificationConfirm": "Bạn có chắc chắn muốn từ chối xác minh cho công ty này?",
+      "companyVerifiedSuccess": "Xác minh công ty thành công",
+      "companyVerifiedError": "Không thể xác minh công ty",
+      "companyRejectedSuccess": "Từ chối xác minh công ty thành công",
+      "companyRejectedError": "Không thể từ chối xác minh",
+      "companyDeletedSuccess": "Xóa công ty thành công",
+      "companyDeletedError": "Không thể xóa công ty",
+      "provideRejectionReason": "Vui lòng cung cấp lý do từ chối:"
+    },
+    "categories": {
+      "title": "Quản lý danh mục",
+      "description": "Quản lý danh mục việc làm",
+      "searchPlaceholder": "Tìm kiếm danh mục...",
+      "addCategory": "Thêm danh mục",
+      "categoryName": "Tên danh mục",
+      "name": "Tên",
+      "slug": "Slug",
+      "descriptionLabel": "Mô tả",
+      "noDescription": "Không có mô tả",
+      "jobCount": "Số việc làm",
+      "actions": "Hành động",
+      "edit": "Sửa",
+      "delete": "Xóa",
+      "view": "Xem",
+      "noCategoriesFound": "Không tìm thấy danh mục",
+      "loadingCategories": "Đang tải danh mục...",
+      "errorLoadingCategories": "Lỗi khi tải danh mục",
+      "deleteCategory": "Xóa danh mục",
+      "deleteCategoryConfirm": "Bạn có chắc chắn muốn xóa \"{name}\"? Hành động này không thể hoàn tác.",
+      "categoryDeletedSuccess": "Xóa danh mục thành công",
+      "categoryDeletedError": "Không thể xóa danh mục",
+      "categories": "Danh mục"
+    },
+    "moderation": {
+      "title": "Kiểm duyệt việc làm",
+      "description": "Xem xét và phê duyệt tin tuyển dụng",
+      "pendingJobs": "Việc làm chờ duyệt",
+      "approveJob": "Phê duyệt việc làm",
+      "rejectJob": "Từ chối việc làm",
+      "approveJobConfirm": "Việc làm này sẽ được xuất bản và hiển thị cho tất cả người dùng.",
+      "rejectJobConfirm": "Việc làm này sẽ bị từ chối. Vui lòng cung cấp lý do.",
+      "jobApprovedSuccess": "Phê duyệt việc làm thành công",
+      "jobRejectedSuccess": "Từ chối việc làm thành công",
+      "jobApprovedError": "Không thể phê duyệt việc làm",
+      "jobRejectedError": "Không thể từ chối việc làm",
+      "approvedToday": "Đã duyệt hôm nay",
+      "rejectedToday": "Đã từ chối hôm nay",
+      "noJobsPending": "Không có việc làm nào chờ kiểm duyệt",
+      "approveSelected": "Phê duyệt đã chọn",
+      "rejectSelected": "Từ chối đã chọn",
+      "rejectionReason": "Lý do từ chối:",
+      "provideRejectionReason": "Vui lòng cung cấp lý do từ chối",
+      "jobTitle": "Tiêu đề việc làm",
+      "company": "Công ty",
+      "type": "Loại",
+      "salary": "Lương",
+      "reports": "Báo cáo",
+      "submitted": "Ngày gửi",
+      "actions": "Hành động"
+    },
+    "reports": {
+      "title": "Quản lý báo cáo",
+      "description": "Xem xét và xử lý báo cáo từ người dùng",
+      "totalReports": "Tổng báo cáo",
+      "pendingReports": "Báo cáo chờ xử lý",
+      "resolvedReports": "Báo cáo đã xử lý",
+      "unresolvedReports": "Báo cáo chưa xử lý",
+      "allStatus": "Tất cả trạng thái",
+      "unresolved": "Chưa xử lý",
+      "resolved": "Đã xử lý",
+      "reporterId": "ID người báo cáo",
+      "resourceType": "Loại tài nguyên",
+      "resourceId": "ID tài nguyên",
+      "reason": "Lý do",
+      "description": "Mô tả",
+      "viewResource": "Xem tài nguyên",
+      "resolve": "Xử lý",
+      "resolveSuccess": "Xử lý báo cáo thành công",
+      "resolveError": "Không thể xử lý báo cáo",
+      "loadingReports": "Đang tải báo cáo...",
+      "errorLoadingReports": "Lỗi khi tải báo cáo",
+      "noReportsFound": "Không tìm thấy báo cáo"
+    },
+    "payments": {
+      "title": "Quản lý thanh toán",
+      "description": "Xem và quản lý các giao dịch thanh toán",
+      "totalRevenue": "Tổng doanh thu",
+      "pendingPayments": "Thanh toán chờ xử lý",
+      "completedPayments": "Thanh toán hoàn thành",
+      "transactionId": "Mã giao dịch",
+      "userId": "ID người dùng",
+      "amount": "Số tiền",
+      "paymentMethod": "Phương thức thanh toán",
+      "status": "Trạng thái",
+      "date": "Ngày",
+      "actions": "Hành động",
+      "success": "Thành công",
+      "pending": "Đang chờ",
+      "failed": "Thất bại",
+      "cancelled": "Đã hủy",
+      "completed": "Hoàn thành",
+      "loadingPayments": "Đang tải thanh toán...",
+      "errorLoadingPayments": "Lỗi khi tải thanh toán",
+      "noPaymentsFound": "Không tìm thấy thanh toán",
+      "paymentTransactions": "Giao dịch thanh toán"
+    },
+    "settings": {
+      "title": "Cài đặt hệ thống",
+      "description": "Cấu hình cài đặt và tùy chọn toàn hệ thống",
+      "general": "Cài đặt chung",
+      "security": "Cài đặt bảo mật",
+      "notifications": "Thông báo",
+      "saveSettings": "Lưu thay đổi",
+      "settingsSaved": "Cài đặt đã được lưu thành công",
+      "settingsError": "Không thể cập nhật cài đặt",
+      "loadingSettings": "Đang tải cài đặt...",
+      "siteName": "Tên trang web",
+      "siteDescription": "Mô tả trang web",
+      "contactEmail": "Email liên hệ",
+      "contactPhone": "Số điện thoại liên hệ",
+      "logoUrl": "URL Logo",
+      "passwordMinLength": "Độ dài mật khẩu tối thiểu",
+      "sessionTimeout": "Thời gian hết phiên (phút)",
+      "maxLoginAttempts": "Số lần đăng nhập tối đa",
+      "maintenanceMode": "Chế độ bảo trì",
+      "enableMaintenanceMode": "Bật chế độ bảo trì",
+      "maintenanceMessage": "Thông báo bảo trì",
+      "maintenanceDescription": "Người dùng sẽ thấy trang bảo trì",
+      "maintenancePlaceholder": "Chúng tôi đang thực hiện bảo trì. Vui lòng quay lại sau.",
+      "reset": "Đặt lại",
+      "saving": "Đang lưu..."
+    },
+    "common": {
+      "save": "Lưu",
+      "cancel": "Hủy",
+      "confirm": "Xác nhận",
+      "delete": "Xóa",
+      "edit": "Sửa",
+      "view": "Xem",
+      "search": "Tìm kiếm",
+      "filter": "Lọc",
+      "export": "Xuất",
+      "import": "Nhập",
+      "loading": "Đang tải...",
+      "noData": "Không có dữ liệu",
+      "showing": "Hiển thị",
+      "of": "trong",
+      "to": "đến",
+      "results": "kết quả",
+      "previous": "Trước",
+      "next": "Tiếp",
+      "reset": "Đặt lại",
+      "clear": "Xóa",
+      "selected": "đã chọn",
+      "all": "Tất cả",
+      "loadingJobs": "Đang tải việc làm...",
+      "loadingCompanies": "Đang tải công ty...",
+      "errorLoadingJobs": "Lỗi khi tải việc làm",
+      "errorLoadingCompanies": "Lỗi khi tải công ty"
+    }
   }
 }
