feat: Update admin access control and enhance user interface elements

--- a/locales/en.json
+++ b/locales/en.json
@@ -408,6 +408,7 @@
       "jobs": "Jobs",
       "jobModeration": "Job Moderation",
       "companies": "Companies",
+      "employerCompanyProfile": "Company Profile",
       "reports": "Reports",
       "categories": "Categories",
       "payments": "Payments",
