--- a/locales/vi.json
+++ b/locales/vi.json
@@ -398,6 +398,7 @@
       "jobs": "Việc làm",
       "jobModeration": "Kiểm duyệt việc làm",
       "companies": "Công ty",
+      "employerCompanyProfile": "Hồ sơ công ty",
       "reports": "Báo cáo",
       "categories": "Danh mục",
       "payments": "Thanh toán",
