feat: Integrate job applications management with Kanban board UI, enhancing application tracking and user interaction

--- a/locales/en.json
+++ b/locales/en.json
@@ -406,6 +406,7 @@
       "dashboard": "Dashboard",
       "users": "Users",
       "jobs": "Jobs",
+      "applications": "Applications",
       "jobModeration": "Job Moderation",
       "companies": "Companies",
       "employerCompanyProfile": "Company Profile",
