--- a/locales/vi.json
+++ b/locales/vi.json
@@ -396,6 +396,7 @@
       "dashboard": "Bảng điều khiển",
       "users": "Người dùng",
       "jobs": "Việc làm",
+      "applications": "Đơn ứng tuyển",
       "jobModeration": "Kiểm duyệt việc làm",
       "companies": "Công ty",
       "employerCompanyProfile": "Hồ sơ công ty",
